force-app/main/default/objects/Account/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Geographic division served. Replaces Industry for LOVING accounts.</description>
    <inlineHelpText>Primary service division for this account. Drives Territory.</inlineHelpText>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Triad</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>Greenville</fullName>
            </value>
            <value>
                <fullName>Charlotte-North</fullName>
            </value>
            <value>
                <fullName>Charlotte-South</fullName>
            </value>
            <value>
                <fullName>Asheville</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
                <isActive>false</isActive>
                <label>Charlotte</label>
            </value>
            <value>
                <fullName>Spartanburg</fullName>
                <isActive>false</isActive>
                <label>Spartanburg</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>