force-app/main/default/objects/Account/fields/Model_Home_Discount_Notes__c.field-meta.xml
<CustomField>
    <fullName>Model_Home_Discount_Notes__c</fullName>
    <label>Model Home Discount Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>