force-app/main/default/objects/Account/fields/MSA_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>MSA_Auto_Renew__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Default true; 90-day notice to terminate</description>
    <label>MSA Auto Renew</label>
    <type>Checkbox</type>
</CustomField>