force-app/main/default/objects/Account/fields/MSA_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Effective_Date__c</fullName>
    <description>Master Service Agreement start</description>
    <label>MSA Effective Date</label>
    <type>Date</type>
</CustomField>