force-app/main/default/objects/Account/fields/MSA_Number__c.field-meta.xml
<CustomField>
    <fullName>MSA_Number__c</fullName>
    <label>MSA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>