force-app/main/default/objects/Account/fields/Non_Portal_Invoice_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Non_Portal_Invoice_Requirements__c</fullName>
    <label>Non-Portal Invoice Required Fields</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>