force-app/main/default/objects/Account/fields/ODL_Household_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>ODL_Household_Display_Name__c</fullName>
    <description>Outdoor Living-only household display name used on homeowner surfaces without renaming the underlying account.</description>
    <inlineHelpText>Use a LOVING household display label such as Smith Household for ODL homeowner pages.</inlineHelpText>
    <label>ODL Household Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>