force-app/main/default/objects/Account/fields/ODL_Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>ODL_Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional spouse or secondary contact used by Outdoor Living homeowner workflows.</description>
    <inlineHelpText>Optional spouse or second contact for ODL homeowner scheduling, follow-up, and email workflows.</inlineHelpText>
    <label>ODL Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (ODL Secondary Contact)</relationshipLabel>
    <relationshipName>Accounts_ODLSecondaryContact</relationshipName>
    <type>Lookup</type>
</CustomField>