force-app/main/default/objects/Account/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <label>On Hold Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>