force-app/main/default/objects/Account/fields/On_Time_Completion_Pct__c.field-meta.xml
<CustomField>
    <fullName>On_Time_Completion_Pct__c</fullName>
    <description>Trailing-30-day on-time completion %. Maintained by DivisionKpiRecalcBatch. System-maintained; set FLS read-only. Spec Section 3.5.</description>
    <label>On-Time Completion %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>