force-app/main/default/objects/Account/fields/Open_PO_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_PO_Count__c</fullName>
    <label>Open POs</label>
    <description>Count of open Builder_PO__c records for this division. Populated nightly by DivisionKpiRecalcBatch.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>