force-app/main/default/objects/Account/fields/Open_Warranty_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Warranty_Count__c</fullName>
    <label>Open Warranty WOs</label>
    <description>Count of open WorkOrders with AssetWarrantyId populated for this division. Populated nightly by DivisionKpiRecalcBatch.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>