force-app/main/default/objects/Account/fields/Open_WO_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_WO_Count__c</fullName>
    <description>System-maintained count by Apex (no-DLRS path). FLS read-only.</description>
    <label>Open Work Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>