force-app/main/default/objects/Account/fields/Parent_Revenue_T12M__c.field-meta.xml
<CustomField>
    <fullName>Parent_Revenue_T12M__c</fullName>
    <description>System-maintained by Apex (no-DLRS path). FLS read-only for humans. Builder Account Backend Spec.</description>
    <label>Parent Revenue (T12M)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>