force-app/main/default/objects/Account/fields/Parent_Transaction_Lock__c.field-meta.xml
<CustomField>
    <fullName>Parent_Transaction_Lock__c</fullName>
    <description>When true, blocks POs, communities, and work orders at the Builder Parent tier. The Parent is roll-up only. Builder Account Backend Build Spec Section 2.</description>
    <defaultValue>true</defaultValue>
    <label>Parent Transaction Lock</label>
    <type>Checkbox</type>
</CustomField>