force-app/main/default/objects/Account/fields/Payment_Schedule_16_End__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_16_End__c</fullName>
    <label>Payment Schedule (Invoices 16th–End)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>