force-app/main/default/objects/Account/fields/Payment_Schedule_1_15__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_1_15__c</fullName>
    <label>Payment Schedule (Invoices 1st–15th)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>