force-app/main/default/objects/Account/fields/Physical_City__c.field-meta.xml
<CustomField>
    <fullName>Physical_City__c</fullName>
    <label>Physical City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>