force-app/main/default/objects/Account/fields/Physical_City_State__c.field-meta.xml
<CustomField>
    <fullName>Physical_City_State__c</fullName>
    <label>City / State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>