force-app/main/default/objects/Account/fields/Physical_State__c.field-meta.xml
<CustomField>
    <fullName>Physical_State__c</fullName>
    <label>Physical State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>