force-app/main/default/objects/Account/fields/Physical_Street__c.field-meta.xml
<CustomField>
    <fullName>Physical_Street__c</fullName>
    <label>Physical Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>