force-app/main/default/objects/Account/fields/Physical_Zip__c.field-meta.xml
<CustomField>
    <fullName>Physical_Zip__c</fullName>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>