force-app/main/default/objects/Account/fields/Pine_Straw_Or_Mulch__c.field-meta.xml
<CustomField>
    <fullName>Pine_Straw_Or_Mulch__c</fullName>
    <label>Pine Straw or Mulch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pine Straw</fullName>
            </value>
            <value>
                <fullName>Mulch</fullName>
            </value>
            <value>
                <fullName>Varies by Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>