force-app/main/default/objects/Account/fields/Pipeline_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Bucket__c</fullName>
    <label>Pipeline Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90+ Days</fullName>
            </value>
            <value>
                <fullName>60+ Days</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>Ready to Schedule</fullName>
            </value>
            <value>
                <fullName>Takeoff In Progress</fullName>
            </value>
            <value>
                <fullName>Takeoff Complete</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>