force-app/main/default/objects/Account/fields/Plant_Health_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Plant_Health_Warranty__c</fullName>
    <label>Plant Health Warranty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>