force-app/main/default/objects/Account/fields/Price_Adjustment_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Price_Adjustment_Notice_Days__c</fullName>
    <label>Price Adjustment Notice (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>