force-app/main/default/objects/Account/fields/Price_Adjustment_Process__c.field-meta.xml
<CustomField>
    <fullName>Price_Adjustment_Process__c</fullName>
    <label>Price Adjustment Process</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>