force-app/main/default/objects/Account/fields/Price_Book_Link__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Link__c</fullName>
    <inlineHelpText>Link to the current builder price book / unit pricing sheet.</inlineHelpText>
    <label>Price Book Link</label>
    <type>Url</type>
</CustomField>