force-app/main/default/objects/Account/fields/Pricing_Book_Active__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Book_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validation: must be true before any WO can be priced</description>
    <label>Pricing Book Active</label>
    <type>Checkbox</type>
</CustomField>