force-app/main/default/objects/Account/fields/Primary_AP_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_AP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Accounts Payable contact at this builder division. Invoices are sent to this person. Used for billing workflow notifications.</description>
    <label>Primary AP Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (AP Contact)</relationshipLabel>
    <relationshipName>Accounts_AP</relationshipName>
    <type>Lookup</type>
</CustomField>