force-app/main/default/objects/Account/fields/Primary_CM_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_CM_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary builder Construction Manager for this division. Used as default CM on new communities when no community-level CM is set.</description>
    <label>Primary CM Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (CM Contact)</relationshipLabel>
    <relationshipName>Accounts_CM</relationshipName>
    <type>Lookup</type>
</CustomField>