force-app/main/default/objects/Account/fields/Punch_Response_Days__c.field-meta.xml
<CustomField>
    <fullName>Punch_Response_Days__c</fullName>
    <label>Punch Response (business days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>