force-app/main/default/objects/Account/fields/Purchasing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Contact_Email__c</fullName>
    <label>Director of Purchasing — Email</label>
    <type>Email</type>
</CustomField>