force-app/main/default/objects/Account/fields/Purchasing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Contact_Name__c</fullName>
    <label>Director of Purchasing — Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>