force-app/main/default/objects/Account/fields/Purchasing_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Contact_Phone__c</fullName>
    <label>Director of Purchasing — Phone</label>
    <type>Phone</type>
</CustomField>