force-app/main/default/objects/Account/fields/QI_Deadline_Hours__c.field-meta.xml
<CustomField>
    <fullName>QI_Deadline_Hours__c</fullName>
    <description>Hours after Work Order approval that the FM must complete the Quality Inspection. Drives QI SLA escalation. Common values: 24, 48, 72, 120 (5 business days).</description>
    <label>QI Deadline (Hours After Approval)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>