force-app/main/default/objects/Account/fields/Relationship_Notes__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Notes__c</fullName>
    <description>Free-text relationship notes for the Builder Parent. Builder Account Backend Build Spec Section 2.</description>
    <label>Relationship Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>