force-app/main/default/objects/Account/fields/Relationship_Tier__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Tier__c</fullName>
    <description>Strategic relationship tier for the Builder Parent. Builder Account Backend Build Spec Sections 2 and 4.</description>
    <label>Relationship Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Watch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>