force-app/main/default/objects/Account/fields/Release_Schedule_Days__c.field-meta.xml
<CustomField>
    <fullName>Release_Schedule_Days__c</fullName>
    <description>Days between PO release date and expected landscape start date for this builder/division. Example: DR Horton Charlotte = 90 means if PO releases Jan 1, landscape starts ~Apr 1. Used to auto-calculate Target Start Date on Work Orders when no explicit start date is on the PO.</description>
    <label>Release Schedule (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>