force-app/main/default/objects/Account/fields/Renewal_Cert_Lead_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cert_Lead_Days__c</fullName>
    <label>Renewal Cert Lead Time (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>