force-app/main/default/objects/Account/fields/Reseed_Policy__c.field-meta.xml
<CustomField>
    <fullName>Reseed_Policy__c</fullName>
    <label>Re-Seed Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>