force-app/main/default/objects/Account/fields/Scheduling_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Contact_Email__c</fullName>
    <label>Scheduling Contact — Email</label>
    <type>Email</type>
</CustomField>