force-app/main/default/objects/Account/fields/Scheduling_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Contact_Name__c</fullName>
    <label>Scheduling Contact — Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>