force-app/main/default/objects/Account/fields/Scheduling_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Contact_Phone__c</fullName>
    <label>Scheduling Contact — Phone</label>
    <type>Phone</type>
</CustomField>