force-app/main/default/objects/Account/fields/Scheduling_Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Lead_Time_Days__c</fullName>
    <label>Scheduling Lead Time (business days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>