force-app/main/default/objects/Account/fields/Scope_Applies_To__c.field-meta.xml
<CustomField>
    <fullName>Scope_Applies_To__c</fullName>
    <label>Scope Applies To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>