force-app/main/default/objects/Account/fields/Scope_Cost_Categories__c.field-meta.xml
<CustomField>
    <fullName>Scope_Cost_Categories__c</fullName>
    <label>Scope Cost Categories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>