force-app/main/default/objects/Account/fields/Scope_Of_Work_Link__c.field-meta.xml
<CustomField>
    <fullName>Scope_Of_Work_Link__c</fullName>
    <label>Scope of Work Link</label>
    <type>Url</type>
</CustomField>