force-app/main/default/objects/Account/fields/Scope_Source__c.field-meta.xml
<CustomField>
    <fullName>Scope_Source__c</fullName>
    <inlineHelpText>e.g. &apos;Exhibit A of Contractor Agreement&apos;</inlineHelpText>
    <label>Scope of Work Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>