force-app/main/default/objects/Account/fields/Scope_Summary__c.field-meta.xml
<CustomField>
    <fullName>Scope_Summary__c</fullName>
    <label>Scope Summary (Narrative)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>