force-app/main/default/objects/Account/fields/Seasonal_Tree_Lead_Time_Notes__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Tree_Lead_Time_Notes__c</fullName>
    <label>Seasonal Tree Lead Time Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>