force-app/main/default/objects/Account/fields/Service_Call_Response_Hours__c.field-meta.xml
<CustomField>
    <fullName>Service_Call_Response_Hours__c</fullName>
    <label>Service Call Response (hrs)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>