force-app/main/default/objects/Account/fields/Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Services_Offered__c</fullName>
    <label>Services Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production Landscaping</fullName>
            </value>
            <value>
                <fullName>Aqua Service</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Lawn Care</fullName>
            </value>
            <value>
                <fullName>Grading</fullName>
            </value>
            <value>
                <fullName>Refreshes</fullName>
            </value>
            <value>
                <fullName>Signature Builds</fullName>
            </value>
            <value>
                <fullName>Finishing Touches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>