force-app/main/default/objects/Account/fields/Site_Visit_Deadline_Days__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Deadline_Days__c</fullName>
    <description>Days before scheduled install date that the FM must complete the site readiness check. Drives the T-minus site visit task due date. Example: 2 = 2 days before install (T-48).</description>
    <label>Site Visit Deadline (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>