force-app/main/default/objects/Account/fields/Sod_Billing_Basis__c.field-meta.xml
<CustomField>
    <fullName>Sod_Billing_Basis__c</fullName>
    <inlineHelpText>Takeoff / Pull sheet / FM-verified</inlineHelpText>
    <label>Sod Billing Basis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>