force-app/main/default/objects/Account/fields/Sod_Type_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sod_Type_Notes__c</fullName>
    <label>Sod Type / Species Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>