force-app/main/default/objects/Account/fields/Spec_Type__c.field-meta.xml
<CustomField>
    <fullName>Spec_Type__c</fullName>
    <label>Spec Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exact (Lennar)</fullName>
            </value>
            <value>
                <fullName>Average (DR Horton)</fullName>
            </value>
            <value>
                <fullName>Flexible (Ryan Homes)</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>