force-app/main/default/objects/Account/fields/Speed_Limit_MPH__c.field-meta.xml
<CustomField>
    <fullName>Speed_Limit_MPH__c</fullName>
    <label>Site Speed Limit (mph)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>