force-app/main/default/objects/Account/fields/Staging_Area_Rule__c.field-meta.xml
<CustomField>
    <fullName>Staging_Area_Rule__c</fullName>
    <label>Staging Area Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>