force-app/main/default/objects/Account/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName><label>Street Address</label>
    <length>255</length><required>false</required>
    <type>Text</type><unique>false</unique>
</CustomField>