force-app/main/default/objects/Account/fields/Swale_Tolerance_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Swale_Tolerance_Hrs__c</fullName>
    <label>Swale Standing Water Tolerance (hrs)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>