force-app/main/default/objects/Account/fields/Takeoff_Complete__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Takeoff Complete</label>
    <type>Checkbox</type>
</CustomField>