force-app/main/default/objects/Account/fields/Takeoff_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Completed_Date__c</fullName>
    <label>Takeoff Completed Date</label>
    <type>Date</type>
</CustomField>