force-app/main/default/objects/Account/fields/Takeoff_Confirmed_Lighting__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Confirmed_Lighting__c</fullName>
    <label>Confirmed Lighting Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>