force-app/main/default/objects/Account/fields/Takeoff_Confirmed_Shrubs_3G__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Confirmed_Shrubs_3G__c</fullName>
    <label>Confirmed Shrubs 3G</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>