force-app/main/default/objects/Account/fields/Takeoff_Confirmed_Sod_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Confirmed_Sod_Sqft__c</fullName>
    <label>Confirmed Sod Sq Ft</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>