force-app/main/default/objects/Account/fields/Takeoff_Deadline_Days__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Deadline_Days__c</fullName>
    <description>Days from Takeoff Task creation that the FM must complete the physical site takeoff. Drives 48-hour escalation clock. Defaults to 2 if blank.</description>
    <label>Takeoff Deadline (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>