force-app/main/default/objects/Account/fields/Takeoff_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Takeoff Overdue</label>
    <type>Checkbox</type>
</CustomField>