force-app/main/default/objects/Account/fields/Takeoff_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Takeoff Task Created</label>
    <type>Checkbox</type>
</CustomField>