force-app/main/default/objects/Account/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Auto-derived territory based on Market.</description>
    <formula>CASE( TEXT(Market__c),
  &quot;Asheville&quot;, &quot;Western NC&quot;,
  &quot;Charlotte&quot;, &quot;Metro Charlotte&quot;,
  &quot;Greenville&quot;, &quot;Upstate SC&quot;,
  &quot;Spartanburg&quot;, &quot;Upstate SC&quot;,
  &quot;&quot;
)</formula>
    <inlineHelpText>Auto-populated from Market.</inlineHelpText>
    <label>Territory</label>
    <type>Text</type>
</CustomField>