force-app/main/default/objects/Account/fields/Total_Active_WOs__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_WOs__c</fullName>
    <description>Count of active work orders for this account. Maintained by LovingRollupBatch.</description>
    <label>Total Active Work Orders</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>