force-app/main/default/objects/Account/fields/Total_Communities__c.field-meta.xml
<CustomField>
    <fullName>Total_Communities__c</fullName>
    <description>Total community count across all divisions for this builder. Maintained by LovingRollupBatch.</description>
    <label>Total Communities</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>