force-app/main/default/objects/Account/fields/Trade_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Trade_Type_Code__c</fullName>
    <inlineHelpText>e.g. &apos;352 - Landscape&apos;</inlineHelpText>
    <label>Trade Type Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>