force-app/main/default/objects/Account/fields/Tree_Billing_Basis__c.field-meta.xml
<CustomField>
    <fullName>Tree_Billing_Basis__c</fullName>
    <inlineHelpText>Community average (DR Horton) / Pull sheet (Yellowstone) / Per PO (Lennar/Ryan)</inlineHelpText>
    <label>Tree Billing Basis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>