force-app/main/default/objects/Account/fields/Umbrella_Limit__c.field-meta.xml
<CustomField>
    <fullName>Umbrella_Limit__c</fullName>
    <label>Umbrella / Excess Limit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>