force-app/main/default/objects/Account/fields/Utility_Locate_Lead_Hours__c.field-meta.xml
<CustomField>
    <fullName>Utility_Locate_Lead_Hours__c</fullName>
    <label>811 / Utility Locate Lead (hrs)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>